--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Caleb Reiter</title>
-</head>
-<body>
-	<h1>Student Bio</h1>
-	<h2>Caleb T. Reiter</h2>
-	<img src="./images/picture.jpg" width:"200px"; height:"200px"/>
-	<p>
-		I am not a robot.
-	</p>
-	<h1>Contact Info</h1>
-	<ul>
-		<li><strong>Email:</strong> <a href="caleb@reiters.org">caleb@reiters.org</a></li>
-		<li><strong>Github:</strong> <a href="https://github.com/CalebReiter">Caleb Reiter</a></li>
-		<li><strong>Portfolio:</strong> <a href="#">Coming Soon</a></li>
-	</ul>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Caleb Reiter</title>
+  </head>
+  <body>
+
+  <!-- Site Header -->
+    <header>
+      <h1>Student Bio</h1>
+    </header>
+
+    <div>
+
+      <!-- Section 1: Bio -->
+      <section>
+
+        <h2>Caleb T. Reiter</h2>
+	    <img src="./images/picture.jpg" width:"200px"; alt="Caleb Reiter"/>
+	    <p>
+	      I am not a robot.
+	    </p>
+	  </section>
+
+	  <!-- Section 2: Contact Info -->
+	  <section>
+
+	    <h2>Contact Info</h2>
+	    <ul>
+	      <li><strong>Email:</strong>		<a href="caleb@reiters.org">caleb@reiters.org</a></li>
+		  <li><strong>Github:</strong>	<a href="https://github.com/CalebReiter">Caleb Reiter</a></li>
+		  <li><strong>Portfolio:</strong>	<a href="#">Coming Soon</a></li>
+	    </ul>
+	  </section>
+    </div>
+  </body>
 </html>
